  file HISTORY.txt.

  Zope 2.9.5 (unreleased)

   Bugs fixed

      - Updated Five to bugfix release 1.3.7.

      - Collector #2157: Expose name of broken class in SystemError raised
        from '__getstate__' of a broken instance.

      - Usage of 'urljoin' in 'webdav.davcmds' could lead to wrongly
        constructed urls.

  Zope 2.9.4 (2006/07/21)

   Bugs fixed

      - reStructuredText/ZReST: setting raw_enabled to 0 for security
        reasons

      - Collector #2113:  'zopectl test' often masked Ctrl-C.

      - OFS Application: Updated deprecation warnings.
        Support for '__ac_permissions__' and 'meta_types' will be removed in
        Zope 2.11, 'methods' support might remain longer.

      - Collector #2136: Map ResourceLockedError to the correct response code.

      - Collector #2109: XML-RPC did not handle DateTime.DateTime objects.

      - Collector #2016: DemoStorage couldn't wrap base storages without
                         an '_oid' attribute.

      - Collector #2133: standard_error_messages are out of sync.

      - Updated Five to bugfix release 1.3.6.

      - Collector #2116: sequence.sort() did not work properly
        locale related comparison methods

      - Collector 2077: fixed problem with ACTUAL_URL and SiteRoot

      - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership

      - Collector #2063: cleaned up some mess in MailHost.sendTemplate()

   Other Changes

      - Disabled docutils file inclusion completely, rather than trying
        to jigger it via configuration settings.

      - Returned to the "classic" './configure && make && make install'
        recipe, dropping the use of 'zpkg' for building Zope2 releases.

      - Updated to ZODB 3.6.2

  Zope 2.9.3 (2006/05/13)

   Bugs fixed

      - Collector #2083: 'make clean' leaves turds.

      - Collector #2082: 'make install' broken.

      - Collector #2081: 'make instance' forced inappropriate dir, credentials.
